--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "private": true,
   "license": "BSD",
   "dependencies": {
-    "express": "3.4.8","socket.io":"1.3.2"
+    "express": "3.4.8",
+    "hbs": "^3.0.1",
+    "socket.io": "1.3.2"
   }
 }
